# SimplePlatformer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: Constants.hpp  Game.cpp  Game.hpp  Main.cpp
src/entities/: Entity.hpp
src/entities/Adventurer/: Adventurer.cpp  Adventurer.hpp
src/hud/: Button.cpp  Button.hpp
src/scenes/: BaseScene.hpp  EScenes.hpp  SceneManager.cpp  SceneManager.hpp  TitleScene.cpp  TitleScene.hpp
